update policy and composite arch classes