@@ -9,16 +9,18 @@ package org.testar.webdriver.action;
 import java.util.Collections;
 import java.util.List;
 
-import org.testar.core.action.policy.ClickablePolicy;
-import org.testar.core.action.policy.ScrollablePolicy;
-import org.testar.core.action.policy.TypeablePolicy;
-import org.testar.core.action.policy.WidgetFilterPolicy;
+import org.testar.core.policy.BlockedPolicy;
+import org.testar.core.policy.ClickablePolicy;
+import org.testar.core.policy.EnabledPolicy;
+import org.testar.core.policy.ScrollablePolicy;
+import org.testar.core.policy.TypeablePolicy;
+import org.testar.core.policy.WidgetFilterPolicy;
 import org.testar.engine.action.TextInputProvider;
 import org.testar.engine.action.derivation.DefaultActionDerivationService;
 import org.testar.engine.action.derivation.EscFallbackActionDeriver;
 import org.testar.engine.action.derivation.StateActionDeriver;
-import org.testar.engine.action.policy.EnabledWidgetFilterPolicy;
-import org.testar.engine.action.policy.UnblockedWidgetFilterPolicy;
+import org.testar.engine.policy.TagBlockedPolicy;
+import org.testar.engine.policy.TagEnabledPolicy;
 
 /**
  * WebDriver default derive-action composition using remote scroll-aware web
@@ -33,15 +35,16 @@ public final class WebdriverActionDerivationFactory {
                                                         TypeablePolicy typeablePolicy,
                                                         ScrollablePolicy scrollablePolicy,
                                                         TextInputProvider textInputProvider) {
-        List<WidgetFilterPolicy> widgetFilters = List.of(
-                new EnabledWidgetFilterPolicy(),
-                new UnblockedWidgetFilterPolicy()
-        );
+        List<EnabledPolicy> enabledPolicies = List.of(new TagEnabledPolicy());
+        List<BlockedPolicy> blockedPolicies = List.of(new TagBlockedPolicy());
+        List<WidgetFilterPolicy> widgetFilters = Collections.emptyList();
 
         return DefaultActionDerivationService.prioritizedWithPolicies(
                 Collections.singletonList(clickablePolicy),
                 Collections.singletonList(typeablePolicy),
                 Collections.singletonList(scrollablePolicy),
+                enabledPolicies,
+                blockedPolicies,
                 widgetFilters,
                 Collections.emptyList(),
                 Collections.singletonList(new StateActionDeriver(
